--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -3,9 +3,14 @@
 // ============================================================================
 // Variables
 // ----------------------------------------------------------------------------
-$sans-font-family: 'Lucida Grande',
+$sans-font-family: 'Helvetica Neue',
+Helvetica,
+Arial,
+'Lucida Grande',
 sans-serif !default;
-$mono-font-family: DejaVu Sans Mono,
+$mono-font-family: Open Sans Mono,
+Menlo,
+DejaVu Sans Mono,
 monospace !default;
 // Standard font sizes
 $normal-font-size: 13px;
