--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -3,11 +3,7 @@
 // ============================================================================
 // Variables
 // ----------------------------------------------------------------------------
-$sans-font-family: 'Helvetica Neue',
-Helvetica,
-Arial,
-'Lucida Grande',
-sans-serif !default;
+$sans-font-family: 'Proximan Nova' !default;
 $mono-font-family: Open Sans Mono,
 Menlo,
 DejaVu Sans Mono,
