--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -3,7 +3,11 @@
 // ============================================================================
 // Variables
 // ----------------------------------------------------------------------------
-$sans-font-family: 'Proximan Nova' !default;
+$sans-font-family: Overpass,
+Helvetica,
+Arial,
+'Lucida Grande',
+sans-serif !default;
 $mono-font-family: Open Sans Mono,
 Menlo,
 DejaVu Sans Mono,
