messing with fonts

--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -3,10 +3,7 @@
 // ============================================================================
 // Variables
 // ----------------------------------------------------------------------------
-$sans-font-family: Overpass,
-Helvetica,
-Arial,
-'Lucida Grande',
+$sans-font-family: Animosa,
 sans-serif !default;
 $mono-font-family: Open Sans Mono,
 Menlo,
