messing with fonts

--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -3,7 +3,10 @@
 // ============================================================================
 // Variables
 // ----------------------------------------------------------------------------
-$sans-font-family: Animosa,
+$sans-font-family: 'Noto Sans',
+Helvetica,
+Arial,
+'Lucida Grande',
 sans-serif !default;
 $mono-font-family: Open Sans Mono,
 Menlo,
