messing with fonts

--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -3,7 +3,7 @@
 // ============================================================================
 // Variables
 // ----------------------------------------------------------------------------
-$sans-font-family: 'Helvetica Neue',
+$sans-font-family: 'Futura',
 Helvetica,
 Arial,
 'Lucida Grande',
