messing with fonts

--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -3,7 +3,7 @@
 // ============================================================================
 // Variables
 // ----------------------------------------------------------------------------
-$sans-font-family: Overwatch,
+$sans-font-family: Monaco,
 sans-serif !default;
 $mono-font-family: Open Sans Mono,
 Menlo,
