messing with fonts

--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -5,9 +5,7 @@
 // ----------------------------------------------------------------------------
 $sans-font-family: Monaco,
 sans-serif !default;
-$mono-font-family: Open Sans Mono,
-Menlo,
-DejaVu Sans Mono,
+$mono-font-family: DejaVu Sans Mono,
 monospace !default;
 // Standard font sizes
 $normal-font-size: 13px;
