messing with fonts

--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -3,9 +3,12 @@
 // ============================================================================
 // Variables
 // ----------------------------------------------------------------------------
-$sans-font-family: Monaco,
+$sans-font-family: Arial,
+'Lucida Grande',
 sans-serif !default;
-$mono-font-family: DejaVu Sans Mono,
+$mono-font-family: Open Sans Mono,
+Menlo,
+DejaVu Sans Mono,
 monospace !default;
 // Standard font sizes
 $normal-font-size: 13px;
