--- a/h/static/styles/core/_typography.scss
+++ b/h/static/styles/core/_typography.scss
@@ -3,7 +3,9 @@
 // ============================================================================
 // Variables
 // ----------------------------------------------------------------------------
-$sans-font-family: Arial,
+$sans-font-family: 'Helvetica Neue',
+Helvetica,
+Arial,
 'Lucida Grande',
 sans-serif !default;
 $mono-font-family: Open Sans Mono,
