--- a/h/templates/includes/navbar.html.jinja2
+++ b/h/templates/includes/navbar.html.jinja2
@@ -32,7 +32,7 @@
       {{ lozenge('','') }}
     </template>
     <div class="nav-bar__content">
-      <a href="https://web.hypothes.is/" title="Hypothesis homepage" class="nav-bar__logo-container"><!--
+      <a href="https://google.com/" title="Google Me" class="nav-bar__logo-container"><!--
         !-->{{ svg_icon('logo', 'nav-bar__logo') }}</a>
 
       <div class="nav-bar__search js-search-bar" data-ref="searchBar">
