changing to fb log

--- a/h/templates/includes/navbar.html.jinja2
+++ b/h/templates/includes/navbar.html.jinja2
@@ -33,7 +33,7 @@
     </template>
     <div class="nav-bar__content">
       <a href="https://google.com/" title="Google Me" class="nav-bar__logo-container"><!--
-        !-->{{ svg_icon('logo', 'nav-bar__logo') }}</a>
+        !-->{{ svg_icon('facebook', 'nav-bar__logo') }}</a>
 
       <div class="nav-bar__search js-search-bar" data-ref="searchBar">
         <form class="search-bar"
